feat(api): add initial stripe support
