# packages/api/openapi.yaml
@@ -964,6 +964,58 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /checkout:
+    post:
+      summary: Checkout a reservation
+      description: Creates a checkout session for a reservation
+      operationId: checkout
+      tags: 
+        - reservation
+      requestBody:
+        description: ReservationRequest object to be checked out
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ReservationRequest'
+      responses:
+        '200':
+          description: OK - Returns CheckoutSession object
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CheckoutSession'
+        '400':
+          description: Bad Request - Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: Unauthorized - User is not logged in
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Forbidden - User is not authorized to access this resource
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '404':
+          description: Not Found -  Resource not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '5XX':
+          description: Internal Server Error - Something went wrong
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
 components:
   schemas:
     Address:
@@ -1269,6 +1321,36 @@ components:
           description: autogenerated timestamp
           example: "2020-01-01T00:00:00.000Z"
 
+    ReservationRequest:
+      type: object
+      required:  
+        - userId
+        - listingId
+        - from
+        - to
+        - guests
+      properties:
+        userId: 
+          type: object
+          description: ID of the user who made reservation
+        listingId: 
+          type: object
+          description: ID of the listing reserved
+        from: 
+          type: string
+          format: date-time
+          description: reservation from date
+          example: "2020-01-01T00:00:00.000Z"
+        to: 
+          type: string
+          format: date-time
+          description: reservation to date
+          example: "2020-01-01T00:00:00.000Z"
+        guests:
+          type: integer
+          description: number of guests
+          example: 3
+
     Recommendation:
       type: object
       required:
@@ -1451,6 +1533,16 @@ components:
           format: date-time
           description: autogenerated timestamp
           example: "2020-01-01T00:00:00.000Z"
+
+    CheckoutSession:
+      type: object
+      required:
+        - sessionUrl
+      properties:
+        sessionUrl:
+          type: string
+          description: The URL of the checkout session
+          example: "https://pay.here.com"
 
     Error:
       type: object
